# relivator-nextjs-template

./: .cursorignore  .editorconfig  .env.example  .eslintcache  .eslintignore  .eslintrc.cjs  .eslintrc.txt  .gitattributes  .gitignore  .knip.json  .lintstagedrc.json  .npmcheckrc  .prettierignore  .prettierrc.json  .putout.json  .reliverse  .swcrc  LICENSE  LICENSE.md  README.md  SECURITY.md  ava.config.mjs  biome.json  biome.jsonc  bun.lockb  changelog.md  code_of_conduct.md  commitlint.config.cjs  components.json  contributing.md  cspell.json  drizzle.config.ts  eslint.config.js  eslint.config.ts  eslint.setup.ts  jest-extended.d.ts  jest.config.js  jest.setup.ts  knip.json  languine.json  (+39 more)
.cursor/rules/: comments.mdc  drizzle-orm.mdc  general-rules.mdc  orm-drizzle.mdc  uploadthing.mdc
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITGUIDE.md  NPMGUIDE.md  SECURITY.md  TEMPLATE.md  TRANSLATIONS.md  funding.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/issue_template/: 1.bug_report.yml  2.feature_request.yml
.github/workflows/: RELIVERSE.yml  STARGAZERS.txt  check.yml  check.yml.txt  code-check.yml
.storybook/: main.ts
.tests/: env.test.ts  payments.test.ts
.thing/: wt.md
.thing/hooks/: discord_webhook.json  stripe_payment_failed.json
.tokenami/: tokenami.config.ts  tokenami.env.ci.d.ts  tokenami.env.d.ts
addons/: better.ts  seed.ts
addons/actions/: index.ts
addons/hooks-react/: use-at-bottom.ts  use-click-outside.ts  use-clipboard.ts  use-controllable-state.ts  use-data-table.ts  use-debounce.ts  use-enter-submit.ts  use-event.ts  use-isomorphic.ts  use-local-storage.ts  use-mounted.ts  use-optimistic-board.ts  use-signal-state.ts  use-toast.ts  use-upload-file.ts
addons/scripts/: index.ts  manager.ts
addons/server/: index.ts
addons/terminal/: index.ts
addons/trpc/: react.tsx  server.ts
addons/types/: index.ts
addons/utils/: index.ts
drizzle/mysql/: 0000_stormy_hercules.sql  0001_futuristic_rhodey.sql
drizzle/pgsql/: 0000_spotty_queen_noir.sql  0001_silly_pandemic.sql
messages/: de-DE.json  de.json  en-US.json  en.json  es-ES.json  es.json  fa-IR.json  fa.json  fr-FR.json  fr.json  hi-IN.json  hi.json  it-IT.json  it.json  ms-MY.json  ms.json  pl-PL.json  pl.json  tr-TR.json  tr.json  uk-UA.json  uk.json  zh-CN.json  zh.json
messages/default/: de-DE.json  en-US.json  es-ES.json  fa-IR.json  fr-FR.json  hi-IN.json  it-IT.json  pl-PL.json  tr-TR.json  (+2 more)
migrations/: 0000_awesome_longshot.sql
public/: site.webmanifest
repo/: changelog.md  deprecated.md  roadmap.md
src/: app.ts  auth.ts  db.ts  env.js  env.mjs  i18n-config.ts  i18n-server.ts  i18n.ts  indicators-error.tsx  liveblocks.config.ts  localization-main.tsx  mdx-components.tsx  middleware.ts  navigation.ts  types.ts
(+2650 files in other folders)
